name:                Wiki
version:             0.0.1.0
synopsis:            A simple Wiki written in Haskell
license:             BSD3
license-file:        LICENSE
author:              David Baumgartner
maintainer:          ch.davidbaumgartner@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable Wiki
  main-is:			 Main.hs
  build-depends:     base ==4.5.*, happstack-server ==7.3.*, hslogger ==1.2.*, blaze-markup ==0.6.*, blaze-html ==0.7.*, transformers ==0.3.*, uuid ==1.3.*, directory ==1.2.*